--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     tools:context="com.teamtreehouse.testingbase.MainActivity"
-    android:id="@+id/bg"
+    android:id="@+id/linearLayout"
     android:gravity="center">
 
     <TextView
